--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Person.</strong>
+                        <strong> Dearr Puks.</strong>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Numquam labore omnis minus maiores laboriosam, facere in beatae esse. 
+                           Hola Pukss,
+                             No puedo creer que ya cumpliste 19 años
+                            Quería hacerte algo súper especial,  una manualidad o algo así, pero ya sabes que no sirvo para esas cosas , así que decidí escribirte esta cartita.
+                            Espero que hoy sea un día increíble para ti, me hace muy feliz poder compartirlo contigo.
+                             Siempre voy a estar ahí para ti.
+                            Soy malo escribiendo MAWWWW
+                            Feliz cumpleaños, amor  ❤️
+
+                            raean
                         </p>
                     </div>
                 </div>
